--- a/ZgzWebApi/ZgzWebApi.csproj
+++ b/ZgzWebApi/ZgzWebApi.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Configuration\WebApiConfig.cs" />
     <Compile Include="Controllers\API\LonganizasController.cs" />
+    <Compile Include="Model\Shop.cs" />
     <Compile Include="Repositories\LonganizaRepository.cs" />
     <Compile Include="Model\Longaniza.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
