Host WebApi in web project

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\TestDrivingWebAPI\packages.config" />
+  <repository path="..\WebLonganizas\packages.config" />
   <repository path="..\ZgzWebApi\packages.config" />
+  <repository path="..\ZgzWebApiConsole\packages.config" />
 </repositories>
