Removed xml formatter

--- a/WebLonganizas/WebLonganizas.csproj
+++ b/WebLonganizas/WebLonganizas.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>WebLonganizas</RootNamespace>
     <AssemblyName>WebLonganizas</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -119,7 +119,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>4501</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:4501/</IISUrl>
+          <IISUrl>http://localhost/WebLonganizas</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
